src/cssStyling/App.css
/* custom fonts
  */

@font-face {
  font-family: "StavokGrotesqueTRIAL-Light";
  src: local("StavokGrotesqueTRIAL-Light"),
    url("./fonts/StavokGrotesqueTRIAL-Light.otf") format(opentype);
}

@font-face {
  font-family: "FixelText-ExtraBold";
  src: local("FixelText-ExtraBold"),
    url("./fonts/FixelText-ExtraBold.woff2") format(woff2);
}

@font-face {
  font-family: "FixelText-Medium";
  src: local("FixelText-Medium"),
    url("./fonts/FixelText-Medium.woff2") format(woff2);
}

/* fonts end here */

/* Global reset */
#root {
  padding: 0;
  margin: 0;
}

.App {
  text-align: left;
  font-family: FixelText-Medium;
}

.center-text {
  text-align: center;
}

.header-app-name {
  padding: 0.5rem;
  padding-left: 0.7rem;
  padding-right: 0.7rem;
  border-radius: 3px;

  color: #021740;
  font-size: xx-large;
  background-color: #d6d4d0;
}

@media (max-width: 575px) {
  .header-app-name {
    font-size: x-large;
    padding-left: 0.6rem;
    padding-right: 0.6rem;
  }
}

.nav-bar {
  opacity: 0.9;
  background-color: #021740;
}

.flex {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 2rem;
}

.main-dropdown {
  margin: 0px 2rem;
}

.language-selector {
  margin-left: 2rem;
}

@media (max-width: 500px) {
  .language-selector {
    margin-left: 3.4rem;
  }
}

@media (max-width: 500px) {
  .main-dropdown {
    margin-left: none;
    margin-right: 1rem;
  }
}

@media (max-width: 575px) {
  button.btn.btn-secondary {
    padding: 0.4rem;
    margin-top: 0.5rem;
  }
}

/* Accordion styling */

.accordion {
  font-size: 1.2rem;
}

.acc-header {
  font-weight: bold;
  font-size: 1.3rem;
}
div.accordion-item {
  border: none;
}

.accordion-header .accordion-button:focus {
  background-color: #768fab;
  color: #fff;
  opacity: 0.9;
}

.accordion-header .accordion-button:not(:focus) {
  background-color: #768fab;
  color: #fff;
  opacity: 0.9;
}

/* need to get back to this to figure out a way to change the color of that pseudo element */
accordion-button::after {
  background-color: #000;
  border-color: #000;
}

/* font styling classes that will be shared with other components across the app but live in accordion styling */

.fixel-font {
  font-family: FixelText-Medium;
}

.default-font {
  font-family: StavokGrotesqueTRIAL-Light;
}
/* Accordion styling */

/* links and buttons */

button.navbar-button {
  padding-left: 0.5rem;
  padding-right: 0.3rem;
  background-color: #d6d4d0;
}

button.btn.btn-primary > a:link {
  color: #fff;
}

button.btn.btn-primary > a:visited {
  color: #fff;
}

button.navbar-button.btn.btn-secondary:hover {
  background-color: #768fab;
}

button.navbar-button.btn.btn-secondary:active {
  background-color: #768fab;
}

button.navbar-button.btn.btn-secondary:focus {
  background-color: #768fab;
}

.app-info-1 {
  color: #768fab;
  padding: 0;
  font-size: 1.25rem;
  font-family: StavokGrotesqueTRIAL-Light;
}

.app-info-2 {
  color: #768fab;
  opacity: 0.9;
  font-family: FixelText-ExtraBold;
  text-transform: uppercase;
}

/* headers */

.new-us {
  font-size: 6.24rem;
  color: #021740;
  margin-top: 5.5rem;
  margin-bottom: 1px;
}

@media (max-width: 575px) {
  .new-us {
    font-size: 4rem;
    margin-top: 4rem;
  }
}

@media (max-width: 350px) {
  .new-us {
    font-size: 3rem;
    margin-top: 3.25rem;
  }
}

.dont-stress {
  font-size: 3.25rem;
  color: #021740;
}

@media (max-width: 350px) {
  .dont-stress {
    font-size: 3rem;
  }
}

.large-font-quick-answers {
  color: #768fab;
  font-size: 2.38rem;
}

@media (max-width: 350px) {
  .large-font-quick-answers {
    font-size: 2rem;
  }
}

.dark-blue {
  color: #021740;
  font-size: 3.25rem;
}

@media (max-width: 575px) {
  .dark-blue {
    font-size: 3rem;
  }
}

@media (max-width: 350px) {
  .dark-blue {
    font-size: 2.5rem;
  }
}

/* headers */

.anti-stress {
  background-image: url("/public/anti_stress.jpg");
  background-repeat: no-repeat;
  height: 200%;
  background-attachment: fixed;
  background-position: bottom -300px right -300px; /* Aligns the image to the right */
}

@media (min-width: 768px) and (max-width: 900px) {
  .anti-stress {
    background-image: url("/public/anti_stress.jpg");
    background-repeat: no-repeat;
    height: 200%;
    background-attachment: fixed;
    background-position: bottom -230px right -390px;
  }
}

@media (min-width: 773px) and (max-width: 900px) {
  .anti-stress {
    background-image: url("/public/anti_stress.jpg");
    background-repeat: no-repeat;
    height: 200%;
    background-attachment: fixed;
    background-position: bottom -85px right -390px;
  }
}

@media (min-width: 900px) and (max-width: 990px) and (min-height: 1368px) {
  .anti-stress {
    background-image: url("/public/anti_stress.jpg");
    background-repeat: no-repeat;
    height: auto;
    background-attachment: fixed;
    background-position: bottom 25px right -390px;
  }
}

@media (max-width: 767px) {
  .anti-stress {
    background-image: none;
  }
}

.form-style {
  opacity: 0.9;
  font-family: StavokGrotesqueTRIAL-Light;
  font-size: 1.3rem;
  margin-top: 3rem;
  margin-bottom: 3rem;
  border-radius: 1rem;
  font-weight: bold;
  font-size: larger;
}

.dropdown-color {
  color: #768fab !important;
}

a.dropdown-item.dropdown-color.active {
  background-color: #e5e9fd;
}

.social-par {
  background-color: #d6d4d0;
  opacity: 0.9;

  display: inline-block;
  padding: 0.5rem;
  border-radius: 7px;
}

.social-links {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1.1rem;
  font-size: x-large;
  margin-top: 0.7rem;
}

.individual-link {
  background-color: #fff;
  padding: 0.2rem;
}

